--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <div style="text-align:center"><img src="img.png" width="100%" alt="付方文" /></div>
     <hr size="1" color="#FFCC66">
     <div style="text-align:center">
-        <video src="video.mp4" controls="controls" height="100%"/>
+        <video src="video.mp4" controls="controls" width="100%"/>
     </div>
     <hr size="1" color="#FFCC66">
     <p>付方文，男，益阳资阳区张家塞乡下资口村人，<strong>身高1.70米左右，有精神障碍、无法言语，但是耳朵可以听见。在2017年9月2号在益阳资阳区张家塞乡下资口村上午失踪，失踪时，穿着长筒靴</strong>。现家人在焦急寻找中，恳请各地公安、民政机关及好心朋友留心此则寻人启事，如有知情者，请与<strong>付端华</strong>联系，手机：<strong>15526302422</strong>，家人感激不尽，并愿意重谢通知准确信息的好心朋友。</p>
